# aci-agents

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml
examples/: agent_with_dynamic_function_discovery_and_dynamic_tools.py  agent_with_dynamic_function_discovery_and_fixed_tools.py  agent_with_pre_planned_tools.py
examples/ACI Unified Playground/: README.md  create_config.py  memory_agent.py
examples/anthropic/: anthropic_with_pre_planned_tool.py
examples/camel-ai/: README.md  aci_mcp_camel.py  aci_toolkit_camel.py  create_config.py  demo-mcp.py  env.example
examples/camel-ai-mcp/: README.md  aci_mcp_camel.py  create_config.py  env.example
examples/cognee/: .env.example  agent_with_dynamic_tool_discovery_pattern1.py
examples/crewai/: crewai_with_pre_planned_tool.py
examples/frameworks/crewai/: crewai_with_pre_planned_tool.py
examples/langchain/: chatopenai_with_pre_planned_tool.py
examples/llamaindex/: llamaindex_with_pre_planned_tool.py
examples/mcp/: unified_mcp_multi_user.py
examples/mistral/: agent_with_dynamic_tool_discovery_pattern_1.py  agent_with_dynamic_tool_discovery_pattern_2.py  agent_with_pre_planned_tools.py
examples/openai/: agent_with_dynamic_tool_discovery_pattern_1.py  agent_with_dynamic_tool_discovery_pattern_2.py  agent_with_pre_planned_tools.py
examples/openai-agents/: agent.py
examples/portia/: .env.example  config.py  portia_aci.py
examples/pydantic/: pydantic_with_pre_planned_tool.py
examples/voice-webpage-summarizer/: README.md  package-lock.json  package.json
(+24 files in other folders)
