[project]
name = "aci-agents"
version = "0.1.0"
description = "Agents and examples built with the ACI SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aci-sdk>=1.0.0b1",
    "camel>=0.1.2",
    "cognee>=0.2.1",
    "mistralai>=1.8.2",
]

[dependency-groups]
dev = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "crewai>=0.108.0",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "llama-index>=0.12.26",
    "openai>=1.68.2",
    "rich>=13.9.4",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "mcp[cli]>=1.6.0",
    "openai-agents>=0.0.12",
    "pydantic-ai>=0.2.4",
    "pydantic-ai-slim[anthropic,openai]>=0.2.4",
    "ag2[anthropic,cohere,gemini,mistral,openai]>=0.9.2",
    "mistralai>=1.8.2",
]
